# LearnC

./: CMakeLists.txt  Constants.cpp  README.md  calc.cpp  filetest.cpp  funpointer.cpp  main.cpp  memcopy.cpp  strFun.cpp  struct.cpp  uniontest.cpp
code/: contact.cpp  contact.h  contacttest.cpp  malloctest.cpp  pointer.cpp  sort.cpp
include/: library.h
